--- a/visualizaciones_1/ejercicios_clase_visualizaciones.ipynb
+++ b/visualizaciones_1/ejercicios_clase_visualizaciones.ipynb
@@ -1249,6 +1249,24 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "matplotlib.figure.Figure"
+            ]
+          },
+          "execution_count": 23,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "QqQj0RgRuDqu"
