--- a/visualizaciones/ejercicios_clase_visualizaciones_1.ipynb
+++ b/visualizaciones/ejercicios_clase_visualizaciones_1.ipynb
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -31,10 +31,10 @@
         {
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0xffff5f30b820>]"
+              "[<matplotlib.lines.Line2D at 0xffff75a2d9d0>]"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -72,10 +72,10 @@
         {
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0xffff5f231280>]"
+              "[<matplotlib.lines.Line2D at 0xffff738ccb80>]"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -470,68 +470,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "am7BF9UGicdh",
-        "outputId": "ad812e89-2b1c-4db7-b7f2-334d4f5a172e"
-      },
+      "execution_count": 19,
+      "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Year\n",
-              "1965    1263.394\n",
-              "1966     899.588\n",
-              "1967    1522.184\n",
-              "1968    1086.237\n",
-              "1969    1739.022\n",
-              "1970    1273.507\n",
-              "1971    1176.612\n",
-              "1972     710.475\n",
-              "1973    1570.073\n",
-              "1974    1425.876\n",
-              "1975    1777.838\n",
-              "1976    1941.167\n",
-              "1977    1202.154\n",
-              "1978    1168.583\n",
-              "1979    1769.187\n",
-              "1980    1268.185\n",
-              "1981    1562.761\n",
-              "1982     943.087\n",
-              "1983    1616.948\n",
-              "1984    1538.961\n",
-              "1985    1214.852\n",
-              "1986    1267.969\n",
-              "1987    1197.999\n",
-              "1988    1822.649\n",
-              "1989    1400.024\n",
-              "1990    1766.294\n",
-              "1991    1497.256\n",
-              "1992    1323.883\n",
-              "1993    1210.252\n",
-              "1994    1987.689\n",
-              "1995    1209.068\n",
-              "1996    1631.331\n",
-              "1997    1844.840\n",
-              "1998    1603.243\n",
-              "1999    1235.683\n",
-              "2000    1094.062\n",
-              "2001    1045.825\n",
-              "2002    1024.881\n",
+              "Jan       11.186\n",
+              "Feb       41.843\n",
+              "Mar       63.733\n",
+              "Apr      470.487\n",
+              "May      952.272\n",
+              "Jun    12809.663\n",
+              "Jul    16340.395\n",
+              "Aug    10529.357\n",
+              "Sep     7642.245\n",
+              "Oct     2783.320\n",
+              "Nov      958.492\n",
+              "Dec      230.646\n",
               "dtype: float64"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "y = df_lluvias.sum(axis='columns')\n",
-        "y"
+        "df_lluvias.T.sum(axis='columns')"
       ]
     },
     {
