--- a/visualizaciones/after_class_visualizaciones.ipynb
+++ b/visualizaciones/after_class_visualizaciones.ipynb
@@ -28,15 +28,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "df.columns\n"
    ]
   },
@@ -407,7 +398,7 @@
     "df_pais_cualquiera2 = df_pais_cualquiera2.reset_index().set_index('ObservationDate')\n",
     "df_pais_cualquiera2 = df_pais_cualquiera2.resample('15D').sum()\n",
     "x = df_pais_cualquiera2.index\n",
-    "df_pais_cualquiera2.head(2)\n"
+    "\n"
    ]
   },
   {
@@ -432,9 +423,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_pais_cualquiera2.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -552,8 +541,7 @@
    "outputs": [],
    "source": [
     "# df = df.groupby('Edad').mean()\n",
-    "df = df.groupby('Edad').median()\n",
-    "df.head()"
+    "df = df.groupby('Edad').median()\n"
    ]
   },
   {
@@ -572,8 +560,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('./datasets/HRDataset_v14.csv')\n",
-    "df.head()"
+    "df = pd.read_csv('./datasets/HRDataset_v14.csv')\n"
    ]
   },
   {
@@ -590,9 +577,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df['Sex']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
