--- a/visualizaciones/after_class_visualizaciones.ipynb
+++ b/visualizaciones/after_class_visualizaciones.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Datasets = https://github.com/anthonyperniah/EjerciciosDeTutoriasDataScience/tree/master/visualizaciones/datasets\n",
     "import pandas as pd\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
