--- a/data_dquisition/main.ipynb
+++ b/data_dquisition/main.ipynb
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1376,162 +1376,132 @@
        "      <td>Married-civ-spouse</td>\n",
        "      <td>Husband</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>38.0</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>143654</td>\n",
-       "      <td>White</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>HS-grad</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>Divorced</td>\n",
-       "      <td>Not-in-family</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>53.0</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>41510</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>11th</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Husband</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>28.0</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>195025</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>Cuba</td>\n",
-       "      <td>Bachelors</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Wife</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48838</th>\n",
-       "      <td>39.0</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>735617153</td>\n",
-       "      <td>White</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>Bachelors</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>Divorced</td>\n",
-       "      <td>Not-in-family</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48839</th>\n",
-       "      <td>64.0</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>1131807446</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>HS-grad</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>Widowed</td>\n",
-       "      <td>Other-relative</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48840</th>\n",
-       "      <td>38.0</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>781422087</td>\n",
-       "      <td>White</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>Bachelors</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Husband</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48841</th>\n",
-       "      <td>44.0</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>161771296</td>\n",
-       "      <td>Asian-Pac-Islander</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>Bachelors</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>Divorced</td>\n",
-       "      <td>Own-child</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48842</th>\n",
-       "      <td>35.0</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>1344995623</td>\n",
-       "      <td>White</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>Bachelors</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Husband</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>48843 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Age      Sex          ID                 Race         Country  \\\n",
-       "0      39.0     Male       49084                White   United-States   \n",
-       "1      50.0     Male       68553                White   United-States   \n",
-       "2      38.0     Male      143654                White   United-States   \n",
-       "3      53.0     Male       41510                Black   United-States   \n",
-       "4      28.0   Female      195025                Black            Cuba   \n",
-       "...     ...      ...         ...                  ...             ...   \n",
-       "48838  39.0   Female   735617153                White   United-States   \n",
-       "48839  64.0     Male  1131807446                Black   United-States   \n",
-       "48840  38.0     Male   781422087                White   United-States   \n",
-       "48841  44.0     Male   161771296   Asian-Pac-Islander   United-States   \n",
-       "48842  35.0     Male  1344995623                White   United-States   \n",
+       "    Age    Sex     ID    Race         Country   Education  Education-Num  \\\n",
+       "0  39.0   Male  49084   White   United-States   Bachelors           13.0   \n",
+       "1  50.0   Male  68553   White   United-States   Bachelors           13.0   \n",
        "\n",
-       "        Education  Education-Num       Marital Status     Relationship  \n",
-       "0       Bachelors           13.0        Never-married    Not-in-family  \n",
-       "1       Bachelors           13.0   Married-civ-spouse          Husband  \n",
-       "2         HS-grad            9.0             Divorced    Not-in-family  \n",
-       "3            11th            7.0   Married-civ-spouse          Husband  \n",
-       "4       Bachelors           13.0   Married-civ-spouse             Wife  \n",
-       "...           ...            ...                  ...              ...  \n",
-       "48838   Bachelors           13.0             Divorced    Not-in-family  \n",
-       "48839     HS-grad            9.0              Widowed   Other-relative  \n",
-       "48840   Bachelors           13.0   Married-civ-spouse          Husband  \n",
-       "48841   Bachelors           13.0             Divorced        Own-child  \n",
-       "48842   Bachelors           13.0   Married-civ-spouse          Husband  \n",
-       "\n",
-       "[48843 rows x 9 columns]"
+       "        Marital Status    Relationship  \n",
+       "0        Never-married   Not-in-family  \n",
+       "1   Married-civ-spouse         Husband  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('./datasets/data.csv', sep='|')\n",
-    "df"
+    "df.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def replace_algo(text):\n",
+    "    if text.lower() == 'Male':\n",
+    "        return 'Male-----'\n",
+    "    else:\n",
+    "        return 'Woman-----'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Race</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Education-Num</th>\n",
+       "      <th>Marital Status</th>\n",
+       "      <th>Relationship</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>39.0</td>\n",
+       "      <td>Male---____reyryywyywyewy-------</td>\n",
+       "      <td>49084</td>\n",
+       "      <td>White</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Not-in-family</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>Male---____reyryywyywyewy-------</td>\n",
+       "      <td>68553</td>\n",
+       "      <td>White</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Husband</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Age                                Sex     ID    Race         Country  \\\n",
+       "0  39.0   Male---____reyryywyywyewy-------  49084   White   United-States   \n",
+       "1  50.0   Male---____reyryywyywyewy-------  68553   White   United-States   \n",
+       "\n",
+       "    Education  Education-Num       Marital Status    Relationship  \n",
+       "0   Bachelors           13.0        Never-married   Not-in-family  \n",
+       "1   Bachelors           13.0   Married-civ-spouse         Husband  "
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Sex'] = df['Sex'].str.replace('Male','Male---____reyryywyywyewy')\n",
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1734,7 +1704,7 @@
        "[48843 rows x 9 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
