--- a/data_dquisition/data_adquisition_2.ipynb
+++ b/data_dquisition/data_adquisition_2.ipynb
@@ -2433,6 +2433,371 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url3 = 'https://raw.githubusercontent.com/bttmly/nba/master/data/teams.json'\n",
+    "response = requests.get(url3)\n",
+    "jsondata = json.loads(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>teamId</th>\n",
+       "      <th>abbreviation</th>\n",
+       "      <th>teamName</th>\n",
+       "      <th>simpleName</th>\n",
+       "      <th>location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1610612737</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>Atlanta Hawks</td>\n",
+       "      <td>Hawks</td>\n",
+       "      <td>Atlanta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1610612738</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>Boston Celtics</td>\n",
+       "      <td>Celtics</td>\n",
+       "      <td>Boston</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1610612751</td>\n",
+       "      <td>BKN</td>\n",
+       "      <td>Brooklyn Nets</td>\n",
+       "      <td>Nets</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1610612766</td>\n",
+       "      <td>CHA</td>\n",
+       "      <td>Charlotte Hornets</td>\n",
+       "      <td>Hornets</td>\n",
+       "      <td>Charlotte</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1610612741</td>\n",
+       "      <td>CHI</td>\n",
+       "      <td>Chicago Bulls</td>\n",
+       "      <td>Bulls</td>\n",
+       "      <td>Chicago</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1610612739</td>\n",
+       "      <td>CLE</td>\n",
+       "      <td>Cleveland Cavaliers</td>\n",
+       "      <td>Cavaliers</td>\n",
+       "      <td>Cleveland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1610612742</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>Dallas Mavericks</td>\n",
+       "      <td>Mavericks</td>\n",
+       "      <td>Dallas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1610612743</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>Denver Nuggets</td>\n",
+       "      <td>Nuggets</td>\n",
+       "      <td>Denver</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1610612765</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>Detroit Pistons</td>\n",
+       "      <td>Pistons</td>\n",
+       "      <td>Detroit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1610612744</td>\n",
+       "      <td>GSW</td>\n",
+       "      <td>Golden State Warriors</td>\n",
+       "      <td>Warriors</td>\n",
+       "      <td>Golden State</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1610612745</td>\n",
+       "      <td>HOU</td>\n",
+       "      <td>Houston Rockets</td>\n",
+       "      <td>Rockets</td>\n",
+       "      <td>Houston</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1610612754</td>\n",
+       "      <td>IND</td>\n",
+       "      <td>Indiana Pacers</td>\n",
+       "      <td>Pacers</td>\n",
+       "      <td>Indiana</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1610612746</td>\n",
+       "      <td>LAC</td>\n",
+       "      <td>Los Angeles Clippers</td>\n",
+       "      <td>Clippers</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1610612747</td>\n",
+       "      <td>LAL</td>\n",
+       "      <td>Los Angeles Lakers</td>\n",
+       "      <td>Lakers</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1610612763</td>\n",
+       "      <td>MEM</td>\n",
+       "      <td>Memphis Grizzlies</td>\n",
+       "      <td>Grizzlies</td>\n",
+       "      <td>Memphis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1610612748</td>\n",
+       "      <td>MIA</td>\n",
+       "      <td>Miami Heat</td>\n",
+       "      <td>Heat</td>\n",
+       "      <td>Miami</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>1610612749</td>\n",
+       "      <td>MIL</td>\n",
+       "      <td>Milwaukee Bucks</td>\n",
+       "      <td>Bucks</td>\n",
+       "      <td>Milwaukee</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>1610612750</td>\n",
+       "      <td>MIN</td>\n",
+       "      <td>Minnesota Timberwolves</td>\n",
+       "      <td>Timberwolves</td>\n",
+       "      <td>Minnesota</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1610612740</td>\n",
+       "      <td>NOP</td>\n",
+       "      <td>New Orleans Pelicans</td>\n",
+       "      <td>Pelicans</td>\n",
+       "      <td>New Orleans</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1610612752</td>\n",
+       "      <td>NYK</td>\n",
+       "      <td>New York Knicks</td>\n",
+       "      <td>Knicks</td>\n",
+       "      <td>New York</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>1610612760</td>\n",
+       "      <td>OKC</td>\n",
+       "      <td>Oklahoma City Thunder</td>\n",
+       "      <td>Thunder</td>\n",
+       "      <td>Oklahoma City</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>1610612753</td>\n",
+       "      <td>ORL</td>\n",
+       "      <td>Orlando Magic</td>\n",
+       "      <td>Magic</td>\n",
+       "      <td>Orlando</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>1610612755</td>\n",
+       "      <td>PHI</td>\n",
+       "      <td>Philadelphia 76ers</td>\n",
+       "      <td>76ers</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>1610612756</td>\n",
+       "      <td>PHX</td>\n",
+       "      <td>Phoenix Suns</td>\n",
+       "      <td>Suns</td>\n",
+       "      <td>Phoenix</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>1610612757</td>\n",
+       "      <td>POR</td>\n",
+       "      <td>Portland Trail Blazers</td>\n",
+       "      <td>Trail Blazers</td>\n",
+       "      <td>Portland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>1610612758</td>\n",
+       "      <td>SAC</td>\n",
+       "      <td>Sacramento Kings</td>\n",
+       "      <td>Kings</td>\n",
+       "      <td>Sacramento</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>1610612759</td>\n",
+       "      <td>SAS</td>\n",
+       "      <td>San Antonio Spurs</td>\n",
+       "      <td>Spurs</td>\n",
+       "      <td>San Antonio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>1610612761</td>\n",
+       "      <td>TOR</td>\n",
+       "      <td>Toronto Raptors</td>\n",
+       "      <td>Raptors</td>\n",
+       "      <td>Toronto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>1610612762</td>\n",
+       "      <td>UTA</td>\n",
+       "      <td>Utah Jazz</td>\n",
+       "      <td>Jazz</td>\n",
+       "      <td>Utah</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>1610612764</td>\n",
+       "      <td>WAS</td>\n",
+       "      <td>Washington Wizards</td>\n",
+       "      <td>Wizards</td>\n",
+       "      <td>Washington</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        teamId abbreviation                teamName     simpleName  \\\n",
+       "0   1610612737          ATL           Atlanta Hawks          Hawks   \n",
+       "1   1610612738          BOS          Boston Celtics        Celtics   \n",
+       "2   1610612751          BKN           Brooklyn Nets           Nets   \n",
+       "3   1610612766          CHA       Charlotte Hornets        Hornets   \n",
+       "4   1610612741          CHI           Chicago Bulls          Bulls   \n",
+       "5   1610612739          CLE     Cleveland Cavaliers      Cavaliers   \n",
+       "6   1610612742          DAL        Dallas Mavericks      Mavericks   \n",
+       "7   1610612743          DEN          Denver Nuggets        Nuggets   \n",
+       "8   1610612765          DET         Detroit Pistons        Pistons   \n",
+       "9   1610612744          GSW   Golden State Warriors       Warriors   \n",
+       "10  1610612745          HOU         Houston Rockets        Rockets   \n",
+       "11  1610612754          IND          Indiana Pacers         Pacers   \n",
+       "12  1610612746          LAC    Los Angeles Clippers       Clippers   \n",
+       "13  1610612747          LAL      Los Angeles Lakers         Lakers   \n",
+       "14  1610612763          MEM       Memphis Grizzlies      Grizzlies   \n",
+       "15  1610612748          MIA              Miami Heat           Heat   \n",
+       "16  1610612749          MIL         Milwaukee Bucks          Bucks   \n",
+       "17  1610612750          MIN  Minnesota Timberwolves   Timberwolves   \n",
+       "18  1610612740          NOP    New Orleans Pelicans       Pelicans   \n",
+       "19  1610612752          NYK         New York Knicks         Knicks   \n",
+       "20  1610612760          OKC   Oklahoma City Thunder        Thunder   \n",
+       "21  1610612753          ORL           Orlando Magic          Magic   \n",
+       "22  1610612755          PHI      Philadelphia 76ers          76ers   \n",
+       "23  1610612756          PHX            Phoenix Suns           Suns   \n",
+       "24  1610612757          POR  Portland Trail Blazers  Trail Blazers   \n",
+       "25  1610612758          SAC        Sacramento Kings          Kings   \n",
+       "26  1610612759          SAS       San Antonio Spurs          Spurs   \n",
+       "27  1610612761          TOR         Toronto Raptors        Raptors   \n",
+       "28  1610612762          UTA               Utah Jazz           Jazz   \n",
+       "29  1610612764          WAS      Washington Wizards        Wizards   \n",
+       "\n",
+       "         location  \n",
+       "0         Atlanta  \n",
+       "1          Boston  \n",
+       "2        Brooklyn  \n",
+       "3       Charlotte  \n",
+       "4         Chicago  \n",
+       "5       Cleveland  \n",
+       "6          Dallas  \n",
+       "7          Denver  \n",
+       "8         Detroit  \n",
+       "9    Golden State  \n",
+       "10        Houston  \n",
+       "11        Indiana  \n",
+       "12    Los Angeles  \n",
+       "13    Los Angeles  \n",
+       "14        Memphis  \n",
+       "15          Miami  \n",
+       "16      Milwaukee  \n",
+       "17      Minnesota  \n",
+       "18    New Orleans  \n",
+       "19       New York  \n",
+       "20  Oklahoma City  \n",
+       "21        Orlando  \n",
+       "22   Philadelphia  \n",
+       "23        Phoenix  \n",
+       "24       Portland  \n",
+       "25     Sacramento  \n",
+       "26    San Antonio  \n",
+       "27        Toronto  \n",
+       "28           Utah  \n",
+       "29     Washington  "
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(jsondata)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
